--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bootstrap",
   "version": "1.0.0",
-  "description": "Learning bootstrap v5 with sass",
+  "description": "Portfolio Web design with bootstrap v5 and sass",
   "main": "index.js",
   "scripts": {
     "compile:sass": "sass --watch scss:assets/css"
@@ -11,7 +11,9 @@
     "bootstrap-v5",
     "sass",
     "learn-bootstrap",
-    "learn-sass"
+    "learn-sass",
+    "Portfolio",
+    "Web Design"
   ],
   "author": "HeinHtetZaw",
   "license": "ISC",
